src/main/java/com/example/errorhandling/demo/application/service/error/UserError.java
package com.example.errorhandling.demo.application.service.error;

public sealed interface UserError extends GeneralError {
   record UserNotFoundError(String userId) implements UserError { }
}
